tests/bad/test_end4.pas
program test_end;

begin
begin

end
    .
